# eventbook

./: .gitignore  Cargo.toml  PLAN.md  client.html  package.json  test_api.sh
.zed/: tasks.json
core/: Cargo.toml
core/src/: document.rs  fractional_index.rs  lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  websocket.rs
src/: README.md  lib.rs  main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web-client/: .env.example  build.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
web-client/src/: App.tsx  main.js  main.tsx
web-client/src/components/: NotebookView.tsx
web-client/src/components/sidebar/: EventBookSidebar.tsx  config.ts  types.ts
web-client/src/components/sidebar/panels/: AuditLogPanel.tsx  DebugPanel.tsx  MetadataPanel.tsx  index.ts
web-client/src/hooks/: useNotebook.ts  useWebSocket.ts
web-client/src/lib/: api.ts
web-client/src/providers/: EventBookProvider.tsx
web-client/src/types/: eventbook.ts
