[package]
name = "eventbook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tokio = { version = "1.47.1", features = ["rt", "macros"] }
turso = "0.2.2"
napi = { version = "3.1.3", default-features = false, features = ["napi6"] }
napi-derive = { version = "3.1.1", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
browser = []

[package.metadata.napi]
targets = ["wasm32-wasip1-threads"]
