[package]
name = "eventbook-server"
version = "0.1.0"
edition = "2021"
description = "Server-side event store with Turso database and HTTP API"

[dependencies]
eventbook-core = { path = "../core" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util"] }
turso = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tokio-tungstenite = "0.24"
futures-util = "0.3"

[[bin]]
name = "eventbook-server"
path = "src/main.rs"

[lib]
name = "eventbook_server"
