[package]
name = "eventbook-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for EventBook event sourcing in the browser"

[lib]
crate-type = ["cdylib"]

[dependencies]
eventbook-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Request",
  "RequestInit",
  "Response",
  "Headers",
]

[features]
default = ["console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true
